--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,7 @@
 projectName=jadecR
-projectVersion=0.0.1-SNAPSHOT
+projectVersion=0.0.6
 
-gradleVersion = '2.2.1'
+sourceCompatibilityVersion=1.8
+mainClass="dwalldorf.jadecr.PojoConverter"
+
+gradleVersion = '2.3'
