--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ jar {
   baseName = projectName
   version = projectVersion
 }
+version = projectVersion
 
 artifacts {
   archives jar
@@ -73,8 +74,9 @@ bintray {
   }
 
   pkg {
-    repo = 'dwalldorf-java'
-    name = 'jadecR'
+    repo = bintrayRepo
+    group = projectGroup
+    name = projectName
 
     //noinspection GroovyAssignabilityCheck
     version {
@@ -97,4 +99,18 @@ bintray {
 
 configurations {
   published
+}
+
+task writeNewPom << {
+  pom {
+    project {
+      licenses {
+        license {
+          name 'GNU General Public License (GPL), Version 2.0'
+          url 'http://www.gnu.org/licenses/gpl-2.0'
+          distribution 'repo'
+        }
+      }
+    }
+  }.writeTo("$buildDir/pom.xml")
 }
