--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'maven'
 apply plugin: 'spring-boot'
+
 apply from: 'settings.gradle'
 apply from: 'secret.gradle'
 
@@ -46,23 +47,38 @@ dependencies {
   testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
-mainClassName = mainClass
-sourceCompatibility = sourceCompatibilityVersion
 version = projectVersion
+
+allprojects {
+  sourceCompatibility = sourceCompatibilityVersion
+  targetCompatibility = sourceCompatibilityVersion
+}
 
 jar {
   baseName = projectName
   version = projectVersion
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+  classifier = 'sources'
+  from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+  classifier = 'javadoc'
+  from javadoc.destinationDir
+}
+
 artifacts {
   archives jar
+  archives sourcesJar
+  archives javadocJar
 }
 
 bintray {
   user = bintrayUser
   key = bintrayApiKey
-  configurations = ['published', 'archives']
+  configurations = ['archives']
 
   dryRun = false
   publish = true
@@ -93,7 +109,7 @@ bintray {
     vcsUrl = 'https://github.com/dwalldorf/jadecR'
     licenses = ['GPL-2.0']
     labels = ['java', 'converter', 'DTO entity converter', 'generic']
-    publicDownloadNumbers = false
+    publicDownloadNumbers = true
   }
 }
 
