--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 ext {
   projectName = 'jadecR'
   projectGroup = 'dwalldorf'
-  projectVersion = '1.0.1'
+  projectVersion = '1.1.0-SNAPSHOT'
 
   bintrayRepo = 'dwalldorf-java'
 
