Added spring core to compile dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,9 @@ apply from: 'settings.gradle'
 apply from: 'secret.gradle'
 
 dependencies {
-  testCompile group: 'junit', name: 'junit', version: '4.11'
+  compile 'org.springframework:spring-core:2.5.6'
+
+  testCompile 'junit:junit:4.11'
 }
 
 version = projectVersion
