--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ repositories {
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'maven'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 
 apply from: 'settings.gradle'
 //apply from: 'secret.gradle'
