--- a/build.gradle
+++ b/build.gradle
@@ -78,8 +78,8 @@ artifacts {
 }
 
 bintray {
-  user = bintrayUser
-  key = bintrayApiKey
+  user = "$System.env.BINTRAY_USER"
+  key = "$System.env.BINTRAY_API_KEY"
   configurations = ['archives']
 
   dryRun = false
