add wrapper task

--- a/build.gradle
+++ b/build.gradle
@@ -132,3 +132,7 @@ task writeNewPom << {
     }
   }.writeTo("$buildDir/pom.xml")
 }
+
+task wrapper(type: Wrapper) {
+  gradleVersion = gradleVersion
+}
