--- a/build.gradle
+++ b/build.gradle
@@ -78,8 +78,8 @@ artifacts {
 }
 
 bintray {
-  user = "$System.env.BINTRAY_USER"
-  key = "$System.env.BINTRAY_API_KEY"
+  user = System.getenv("BINTRAY_USER")
+  key = System.getenv("BINTRAY_API_KEY")
   configurations = ['archives']
 
   dryRun = false
@@ -119,7 +119,7 @@ configurations {
   published
 }
 
-task writeNewPom << {
+task writeNewPom {
   pom {
     project {
       licenses {
